[package]
name = "rust-sot-fov"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.8.1"
faithe = "0.7.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Threading",
]